Fix mobile filter overflow issue

--- a/src/assets/styles/cmps/_HamburgerMenu.scss
+++ b/src/assets/styles/cmps/_HamburgerMenu.scss
@@ -1,7 +1,6 @@
 .hamburger-menu {
   background-color: $clr-bg;
   border-radius: rem(12px);
-  box-shadow: 0 2px 16px rgba(0, 0, 0, 0.12);
   width: 265px;
   padding-block: rem(12px);
 
